--- a/RestApiAts.Api/RestApiAts.API.csproj
+++ b/RestApiAts.Api/RestApiAts.API.csproj
@@ -19,7 +19,7 @@
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.1" />
 	</ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RESTAPIATS.Infra\RestApiAts.Infra.csproj" />
+    <ProjectReference Include="..\RestApiAts.Infra\RestApiAts.Infra.csproj" />
   </ItemGroup>
 
 </Project>
