--- a/RestApiAts.Api/Properties/launchSettings.json
+++ b/RestApiAts.Api/Properties/launchSettings.json
@@ -12,12 +12,12 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "https://localhost:44387/swagger/index.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "RestApiModeloDDD.API": {
+    "RestApiAts.Api": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "https://localhost:44387/swagger/index.html",
