--- a/RestApiAts.Domain.Core/RestApiAts.Domain.Core.csproj
+++ b/RestApiAts.Domain.Core/RestApiAts.Domain.Core.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RESTAPIATS.Domain\RestApiAts.Domain.csproj" />
+    <ProjectReference Include="..\RestApiAts.Domain\RestApiAts.Domain.csproj" />
   </ItemGroup>
 
 </Project>
